--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link href="styles.css" type="text/css" rel="stylesheet">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=devicewidth,
 initial-scale=1.0">
@@ -10,5 +11,6 @@ initial-scale=1.0">
 <body>
 <h1>INFO2180 Lab 2</h1>
 <p>This is a webpage for Lab 2 of INFO2180.</p>
+<img src="Halo-master-chief.jpe">
 </body>
 </html>
