--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ initial-scale=1.0">
 <body>
 <h1>INFO2180 Lab 2</h1>
 <p>This is a webpage for Lab 2 of INFO2180.</p>
-<img src="Halo-master-chief.jpe"/>
+<img src="Halo master chief.jpe"/>
 </body>
 </html>
